CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(KazBase)

FILE(GLOB_RECURSE KAZBASE_HEADERS *.h)
FILE(GLOB_RECURSE KAZBASE_SOURCES *.cpp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

ADD_LIBRARY(kazbase SHARED ${KAZBASE_SOURCES})

INSTALL(
    FILES ${KAZBASE_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/kazbase
)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/KAZBASEConfig.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kazbase)
INSTALL(TARGETS kazbase DESTINATION lib)
