CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(KazBase)

FILE(GLOB_RECURSE KAZBASE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

ADD_LIBRARY(kazbase SHARED ${KAZBASE_SOURCES})

INSTALL(DIRECTORY kazbase/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/kazbase FILES_MATCHING REGEX ".*\\.(hpp|h)$")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/KAZBASEConfig.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kazbase)
INSTALL(TARGETS kazbase DESTINATION lib)
